<resources>
    <string name="app_name">CS5520GroupProject</string>
    <string name="title_activity_pe_homepage">PE_Homepage_activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_message">Message</string>
    <string name="title_post">Post</string>
    <string name="title_me">Me</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_posts_button">My Posts</string>
    <string name="my_plans_button">My Plans</string>
    <string name="add_plan">Add Plan</string>
    <string name="shop">Shop</string>
    <string name="my_purchases">My Purchases</string>
</resources>