<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_message"
        android:icon="@drawable/baseline_message_24"
        android:title="@string/title_message" />


    <item
        android:id="@+id/navigation_post"
        android:icon="@drawable/baseline_camera_24"
        android:title="@string/title_post" />

    <item
        android:id="@+id/navigation_shopping"
        android:icon="@drawable/baseline_shopping_cart_24"
        android:title="@string/shop" />

    <item
        android:id="@+id/navigation_me"
        android:icon="@drawable/baseline_account_circle_24"
        android:title="@string/title_me" />



</menu>